--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -6,13 +6,13 @@ on:
     branches:
       - main
       - 'dev-*' # dev-new dev-...
-      - 'feat/*' * feat/new feat/...
+      - 'feat/*' # feat/new feat/...
   workflow_dispatch:
   push:
     branches:
       - main
       - 'dev-*' # dev-new dev-...
-      - 'feat/*' * feat/new feat/...
+      - 'feat/*' # feat/new feat/...
       # developer-1
     paths-ignore:
       - '.github/workflows/*'
