--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
-        uses: actions/checkout@v3+
+        uses: actions/checkout@v3
       - name: Install dependencies
         run: npm ci
       - name: Build project
