--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -77,7 +77,7 @@ jobs:
         run: echo "Deploying..."
   report:
     if: failure()
-    runst-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Output information
         run: |
