--- a/.github/workflows/continue.yml
+++ b/.github/workflows/continue.yml
@@ -1,8 +1,8 @@
 name: Continue Deployment
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 jobs:
   lint:
     runs-on: ubuntu-latest
