fix workflow errors

--- a/.github/workflows/continue.yml
+++ b/.github/workflows/continue.yml
@@ -3,6 +3,7 @@ name: Continue Deployment
 #   push:
 #     branches:
 #       - main
+on: workflow_dispatch
 jobs:
   lint:
     runs-on: ubuntu-latest
