--- a/.github/workflows/use-reuse.yml
+++ b/.github/workflows/use-reuse.yml
@@ -3,6 +3,7 @@ name: Reuseable Deployment
 #   push:
 #     branches:
 #       - main
+on: workflow_dispatch
 jobs:
   lint:
     runs-on: ubuntu-latest
