--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -61,26 +61,14 @@ jobs:
       - name: Output contents
         run: ls
       - name: Deploy
+        id: deploy
         uses: ./.github/actions/deploy-s3-javascript
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        with:
-          bucket: your_bucket_name
-          dist-folder: ./dist
-  # report:
-  #   needs: [lint, deploy]
-  #   if: failure()
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Output information
-  #       run: |
-  #         echo "Something went wrong"
-  #         echo "${{ toJSON(github) }}"
-  # information:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Get code
-  #       uses: actions/checkout@v3
-  #     - name: Run custom action
-  #       uses: ./.github/actions/deploy-s3-javascript
+        # env:
+        #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        # with:
+        #   bucket: your_bucket_name
+        #   dist-folder: ./dist
+      - name: Output information
+        run: |
+          echo "Live URL: ${{ steps.deploy.outputs.website-url }}"
