--- a/.github/actions/deploy-s3-javascript/action.yml
+++ b/.github/actions/deploy-s3-javascript/action.yml
@@ -13,7 +13,7 @@ inputs:
     required: true
 outputs:
   website-url:
-    description: 'The UTL of the deployed website.'
+    description: 'The URL of the deployed website.'
 runs:
   using: 'node16'
   main: 'main.js'
